Adding README.txt

--- a/Project 1-Handwritten-Final/Project 1-Handwritten-Final.ipynb
+++ b/Project 1-Handwritten-Final/Project 1-Handwritten-Final.ipynb
@@ -1470,6 +1470,9 @@
    "metadata": {},
    "source": [
     "## Accuracy Score\n",
+    "\n",
+    "I have applied several algorithms including logistic regression, decision tree classifier, random forest classifier, support vector classifier, gradient boosting and naive bayes.\n",
+    "\n",
     "- Artificial Neural Network : Testing Score-- 97.6%\n",
     "- Convolutional Neural Network : Testing Score-- 98.3%\n",
     "- Logistic Regression : Testing Score-- 92.5% and Training Score-- 93.3%\n",
